--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-Unnamed repository; edit this file 'description' to name the repository.
+ 👋 Hi, I’m @Mukheee
+- 👀 I’m interested in ...
+- 🌱 I’m currently learning ...
+- 💞️ I’m looking to collaborate on ...
+- 📫 How to reach me ...
+
+<!---
+Mukheee/Mukheee is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
+You can click the Preview link to take a look at your changes.
+--->
